# stocks-predictor

./: .coverage  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  stock_metrics_downloaded.csv  streamlit_dashboard.py
Dataset/: stock_data_fixed.csv  stock_metrics.csv
Notebooks/: aapl_xgb_model_55.pkl  qualcomm_xgb_model_52.pkl
Notebooks/Ceren/: Ceren_regression_model.ipynb  Data_cleaning.ipynb  lasso_regression_model.pkl  linear_regression_model.pkl  regression_final_notebook.ipynb  ridge_regression_model.pkl  stock_price_regression_baseline.ipynb
Notebooks/Filip/: Classification_model_training_improvement.ipynb  Feature_engineering.ipynb
Notebooks/Maks/: Classification Model.ipynb  EDA_EXCHANGE_RATES.ipynb  EDA_NASDAQ_100_INDEX.ipynb
Notebooks/Zofia/: EDA_eps,macro.ipynb  Smart_Predict.ipynb
Scalers/: QCOM_SCALER_CLF.save
models/: AAPL_SCALER_REG.save  GOOG_LR.pkl  GOOG_SCALER_CLF.save  GOOG_XGB.pkl
models/Classification/: AAPL_XGB.pkl
models/Regression/: AAPL_LR.pkl  QCOM_LR.pkl
src/stocks_predictor/: data_loader.py  db_writer.py  feature_selector.py  main.py  model_predictor.py
tests/: test_data_loader.py  test_db_writer.py  test_main.py  test_model_predictor.py
