[project]
name = "stocks-predictor"
version = "0.1.0"
description = "Stock price prediction using ML"
authors = [
    {name = "0FilipSarik243537", email = "180266056+0FilipSarik243537@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.5.2,<1.6.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "xgboost (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "joblib (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "stocks_predictor", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
